test/files/invalid/file_extension_twice.fbs
file_extension "FOO";
file_extension "BAR";