test/files/invalid/file_extension_twice.stderr
[0m[1m[38;5;9merror[0m[1m: Cannot set file_extension twice[0m
  [0m[34m┌─[0m test/files/invalid/file_extension_twice.fbs:1:1
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m [0m[31mfile_extension "FOO";[0m
  [0m[34m│[0m [0m[31m^^^^^^^^^^^^^^^^^^^^^[0m [0m[31mfirst declaration was here[0m
[0m[34m2[0m [0m[34m│[0m [0m[31mfile_extension "BAR";[0m
  [0m[34m│[0m [0m[31m^^^^^^^^^^^^^^^^^^^^^[0m [0m[31madditional declaration was here[0m

Error: Bailing because of errors
